...
        super.viewDidLoad()
        setupUI()
        bindings()
    }
    
    private func setupUI() {
        title = "Weather Detail"
        contentLbl.numberOfLines = 0

        contentView.layoutMargins = UIEdgeInsets(top: 0, left: 16, bottom: 0, right: 16)
        contentView.isLayoutMarginsRelativeArrangement = true
    }
    
...
