...
        super.viewDidLoad()
        setupUI()
        bindings()
    }
    
    private func setupUI() {
        title = "Home"
        HomeTableViewCell.registerNib(in: tableView)
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 100
        tableView.delegate = self
        tableView.dataSource = self
        searchBar.delegate = self
...
